# frakkcomm

./: .editorconfig  .gitignore  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: build-python-package.yml  publish-package-pypi.yml  publish-package-testpypi.yml  release.yml
src/: ejjelifeny.py  eszkoz.py  frakkcomm.py
src/frakkcomm/: ejjelifeny.py  frakkcomm.py
tests/: test_frakkcomm.py
